@@ -1,0 +1,1 @@
+{$foo|default:""} /* should compile something with @silence error suppression */
